# carton-suggester

./: .gitignore  README.md  carton.db  main.py  pyproject.toml
backend/: configstore.py  database.py  main.py  models.py  packing.py  schemas.py  seed.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  colors.js  i18n.jsx  index.css
frontend/src/components/: CartonManager.jsx  CartonViewer.jsx  ItemManager.jsx  LocaleToggle.jsx  NavBar.jsx  OrderBuilder.jsx  ResultPanel.jsx  SettingsConfig.jsx
frontend/src/locales/: en.properties  zh-Hant.properties
scripts/: _common.ps1  start-all.ps1  start-backend.ps1  start-frontend.ps1  stop-all.ps1  stop-backend.ps1  stop-frontend.ps1
