[project]
name = "carton-suggester"
version = "0.1.0"
description = "Carton suggestion and 3D bin-packing visualization using py3dbp"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "py3dbp>=0.1.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
